# frodobuf

./: Cargo.toml  ChangesFromProtobuf.md  README.md  Roadmap.md
frodobuf/: Cargo.toml  README.md
frodobuf-derive/: Cargo.toml  README.md
frodobuf-derive/src/: lib.rs
frodobuf-schema/: Cargo.toml  README.md
frodobuf-schema/src/: format.rs  lib.rs  model.rs
frodobuf/src/: common.rs  lib.rs  render.rs
frodobuf/src/codegen/: mod.rs  rust.rs  rustfmt.rs
frodobuf/templates/rust/: Cargo.toml.hbs  build.rs.hbs  lib.rs.hbs  service.rs.hbs
interfaces/: README.md
interfaces/system/: Cargo.toml  system.midl
interfaces/system/rust/: Cargo.toml  build.rs
interfaces/system/rust/src/: lib.rs
midl/: Cargo.toml  README.md
midl-parser/: Cargo.toml  README.md
midl-parser/src/: lib.rs  linked_hash_map.rs  model.rs  parser.rs
midl-parser/src/lexer/: float.rs  lexer_impl.rs  mod.rs  parser_language.rs  str_lit.rs  token.rs  tokenizer.rs
midl/src/: main.rs
