[package]
name = "frodobuf"
version = "0.1.0"
edition = "2018"

[features]
default = []
guest = []

[dependencies]
lazy_static = "1.4"
handlebars = "3.5"
toml = "0.5"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
Inflector = "0.11"
frodobuf-schema = { path = "../frodobuf-schema", version = "0.1.0" }
rmp-serde = "0.15.4"
frodobuf-derive = { path = "../frodobuf-derive", version = "0.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
