[package]
name = "frodobuf"
version = "0.1.2"
edition = "2018"
authors = [ "stevelr <legolas@frodobuf.org>" ]
license = "Apache-2.0"
description = "Frodobuf midl parser and code generator for wasmcloud"
homepage = "https://github.com/frodobuf"
repository = "https://github.com/frodobuf/frodobuf"
documentation = "https://docs.rs/frodobuf"
readme = "README.md"

[features]
default = []
guest = []

[dependencies]
async-trait = "0.1"
chrono = "0.4"
handlebars = "3.5"
Inflector = "0.11"
lazy_static = "1.4"
rmp-serde = "0.15.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"

[dependencies.frodobuf-derive]
version = "0.1"
#path = "../frodobuf-derive"
[dependencies.frodobuf-schema]
version = "0.1"
#path = "../frodobuf-schema"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
anyhow = "1.0"
