[package]
name = "midl-parser"
version = "0.1.0"
edition = "2018"
license = "MIT"
homepage = ""

[lib]
doctest = false
bench = false

[dependencies]
frodobuf-schema = { path = "../frodobuf-schema", version = "0.1.0" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
sha2 = "0.9.5"
base64 = "0.13"

[package.metadata.docs.rs]
all-features = true
