[package]
name = "midl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

midl-parser = { path = "../midl-parser", version = "0.1" }
frodobuf-schema = { path = "../frodobuf-schema", version = "0.1" }
frodobuf = { path = "../frodobuf", version = "0.1" }
