[package]
name = "midl"
version = "0.1.2"
edition = "2018"
authors = [ "stevelr <legolas@frodobuf.org>" ]
license = "Apache-2.0"
description = "CLI for MIDL parser and frodobuf code generator"
homepage = "https://github.com/frodobuf"
repository = "https://github.com/frodobuf/frodobuf/midl-parser"
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.frodobuf]
version = "0.1"
#path = "../frodobuf"
[dependencies.frodobuf-schema]
version = "0.1"
#path = "../frodobuf-schema"
[dependencies.midl-parser]
version = "0.1"
#path = "../midl-parser"
