[package]
name = "wasmcloud-system-interface"
edition = "2018"
version = "0.1.1"
authors = [ "stevelr <legolas@frodobuf.org>" ]
license = "Apache-2.0"
description = "wasmcloud system interface (frodobuf/midl)"
homepage = "https://github.com/frodobuf"
repository = "https://github.com/frodobuf/interfaces/system"
documentation = "https://docs.rs/wasmcloud-system-interface"
build = "rust/build.rs"

[lib]
path = "rust/src/lib.rs"

[dependencies]
async-trait = "0.1"
serde_bytes = "0.11"
serde = { version="1.0", features = ["derive"]}

[dependencies.frodobuf]
version = "0.1"
#path = "../../frodobuf"


# dependencies for build.rs
[build-dependencies]
anyhow = "1.0"
serde_json = "1.0"

[build-dependencies.frodobuf]
version = "0.1"
#path = "../../frodobuf"
[build-dependencies.midl-parser]
version = "0.1"
#path = "../../midl-parser"
